fixed logo size on mobile

--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,8 @@ a {
 
 /*Size of logo */
 #logo {
-	width: 25%;
-	height: 25%;
+	width: 35%;
+	height: 35%;
 }
 
 /*Literally just a line*/
